src/objects/EADD_Hub__c.object
<CustomObject>
    <description>An EADD Hub or Milk collection center</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date for collection of this data</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>District In which the Hub is located</description>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>EADD Hubs</relationshipLabel>
        <relationshipName>EADD_Hubs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Farmers_served_by_hub__c</fullName>
        <description>Number of farmers that bring milk to the hub</description>
        <inlineHelpText>Number of farmers that bring milk to the hub</inlineHelpText>
        <label>Farmers served by hub</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hub_capacity_utilization__c</fullName>
        <label>Hub capacity utilization</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milk_sale_profits__c</fullName>
        <label>Milk sale profits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milk_sale_revenue__c</fullName>
        <label>Milk sale revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milk_volumes_bulked__c</fullName>
        <label>Milk volumes bulked</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milk_volumes_rejected__c</fullName>
        <label>Milk volumes rejected</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radius_Covered__c</fullName>
        <description>Radius of hub in terms of diary farmer coverage (km)</description>
        <label>Radius Covered</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subcounty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subcounty</label>
        <referenceTo>Subcounty__c</referenceTo>
        <relationshipLabel>EADD Hubs</relationshipLabel>
        <relationshipName>EADD_Hubs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EADD Hub</label>
    <nameField>
        <label>EADD Hub Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EADD Hubs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>